--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <section class="card-infobox"></section>
         </section>
     </div>
+
+    <button onclick="topFunction()" id="scrollTopBtn" title="Go to top">Top</button>
 </body>
 </html>
 
