--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="./favicon.png">
+    <script src="./declarations.js" defer></script>
     <script src="./listBySearch.js" defer></script>
     <script src="./listByCategory.js" defer></script>
     <title>API-SW</title>
