enhanced-search-result-display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section id="logo-ctnr"><img src="./sw-web.png" alt="star wars logo" /> </section>
         <section id="list-all-root-resource-btn-ctnr"></section>
         <form class="inputForm">
-            <input class="inputField" type="text" placeholder="example: shmi" />
+            <input class="inputField" type="text" placeholder="keyword" />
             <button id="searchBtn" type="submit" class="searchButton">Search</button>
         </form>
     </div>
@@ -28,10 +28,6 @@
         <li class="pasteToInputField ">Solar</li>
         <li class="pasteToInputField ">Geo</li>
         <li class="pasteToInputField ">Skywalker</li>
-        <li class="pasteToInputField ">r2</li>
-        <li class="pasteToInputField ">fighter</li>
-        <li class="pasteToInputField ">yoda</li>
-        <li class="pasteToInputField ">ship</li>
     </ul>
     <h5>Star Wars API : <a href="https://swapi.dev/" target="_blank">https://swapi.dev/</a></h5>
 
