--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <ul id="clickToPaste" class="list-style-none flexRowWrap">
-        <span>paste to search bar :</span>
+        <li>paste to search bar :</li>
         <li class="pasteToInputField ">Poggle</li>
         <li class="pasteToInputField ">Solar</li>
         <li class="pasteToInputField ">Geo</li>
